Important: border-radius + overflow:hidden fix for Safari browser

--- a/src/style/dice.less
+++ b/src/style/dice.less
@@ -90,6 +90,8 @@
             background-color: @panelGrey;
             border: 1px solid @borderColor;
             overflow: hidden;
+            // Add on element with overflow
+            -webkit-mask-image: -webkit-radial-gradient(white, black);
 
             th {
                 white-space: nowrap;
